# docs/swagger.json
@@ -134,152 +134,11 @@
                     "200": {}
                 }
             }
-        },
-        "/studies": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Studies"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Studies"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "create study group",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Studies"
-                ],
-                "parameters": [
-                    {
-                        "description": "Add study",
-                        "name": "study",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/dto.Study"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {}
-                }
-            }
-        },
-        "/studies/{id}": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Studies"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Study ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Study"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "create study group",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Studies"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Study ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Add study",
-                        "name": "study",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/dto.Study"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {}
-                }
-            },
-            "delete": {
-                "description": "delete study by id",
-                "tags": [
-                    "Studies"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Study ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {}
-                }
-            }
         }
     },
     "definitions": {
         "dto.Account": {
             "type": "object"
-        },
-        "dto.Study": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
         },
         "model.Account": {
             "type": "object",
@@ -309,49 +168,6 @@
                     "updatedAt": {
                         "type": "string"
                     }
-                }
-            }
-        },
-        "model.Studies": {
-            "type": "array",
-            "items": {
-                "type": "object",
-                "properties": {
-                    "createdAt": {
-                        "type": "string"
-                    },
-                    "description": {
-                        "type": "string"
-                    },
-                    "id": {
-                        "type": "string"
-                    },
-                    "name": {
-                        "type": "string"
-                    },
-                    "updatedAt": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
-        "model.Study": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string"
                 }
             }
         }
